# disthaul

./: README.md  apphost.cs  apphost.run.json  apphost.ts  aspire.config.json  eslint.config.mjs  package-lock.json
.github/workflows/: main.yml
.modules/: .codegen-hash  aspire.ts  base.ts  transport.ts
Aspire/: DistHaul.sln
Aspire/AppHost/: AppHost.csproj  Program.cs
Aspire/AppHost/Properties/: launchSettings.json
DistHaul/: DistHaul.sln
DistHaul/DistHaul.AppHost/: DistHaul.AppHost.csproj
DistHaul/DistHaul.Tests/: DistHaul.Tests.csproj  UnitTest1.cs
client-management/: Cargo.toml
client-management/api/: Cargo.toml
client-management/api/src/: config.rs  main.rs  routes.rs  telemetry.rs
client-management/api/src/config/: base.toml
client-management/api/src/routes/: health.rs
client-management/domain/: Cargo.toml
ui/: Cargo.toml
ui/src/: main.rs
