[workspace]
members = ["api", "domain"]
resolver = "3"

[workspace.dependencies]
config = "0.15"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = "0.23"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
opentelemetry = { version = "0.31", features = ["logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tls", "trace", "metrics", "logs"] }
tonic = "0.14"
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.32"
anyhow = "1"
thiserror = "2"

domain = { path = "domain" }
