[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

domain = { workspace = true }