[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tonic = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }

domain = { workspace = true }
